--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from pyclustering.utils import draw_image_mask_segments\n",
     "from matplotlib import pyplot as plt\n",
     "from PIL import Image\n",
-    "import cv2\n",
+    "import cv2 as cv\n",
     "import numpy as np"
    ]
   },
@@ -146,19 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## inja ground truth ro cluster mikonam"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## inja ground truth ro cluster mikonam\n",
     "initial_centers = kmeans_plusplus_initializer(gt, cluster_count, kmeans_plusplus_initializer.FARTHEST_CENTER_CANDIDATE).initialize()\n",
     "\n",
     "# Create instance of K-Means algorithm with prepared centers.\n",
@@ -184,20 +176,6 @@
     "kmeans_clusters = np.array(kmeans_clusters)\n",
     "gt_clusters = np.array(gt_clusters)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -262,6 +240,43 @@
     "plt.imshow(new_image)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## inja kmeans openCV\n",
+    "img = cv.imread('ci.jpg')\n",
+    "Z = img.reshape((-1,3))\n",
+    "# convert to np.float32\n",
+    "Z = np.float32(Z)\n",
+    "# define criteria, number of clusters(K) and apply kmeans()\n",
+    "criteria = (cv.TERM_CRITERIA_EPS + cv.TERM_CRITERIA_MAX_ITER, 10, 1.0)\n",
+    "ret,label,center=cv.kmeans(Z,cluster_count,None,criteria,10,cv.KMEANS_RANDOM_CENTERS)\n",
+    "# Now convert back into uint8, and make original image\n",
+    "center = np.uint8(center)\n",
+    "res = center[label.flatten()]\n",
+    "res2 = res.reshape((img.shape))\n",
+    "cv.imshow('res2',res2)\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
