--- a/test.ipynb
+++ b/test.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -189,22 +189,60 @@
      "output_type": "stream",
      "text": [
       "Accuracy :\n",
-      "18.80979629205768\n"
+      "0.0\n",
+      "47968\n"
      ]
     }
    ],
    "source": [
     "## inja accuracy hessab mikonim:\n",
     "## cluster count inja 7 tast :\n",
+    "cluster_array = []\n",
     "acc = 0\n",
     "for i in range(7):\n",
     "    \n",
     "    for j in range(len(kmeans_clusters[i])):\n",
     "        if kmeans_clusters[i][j] in gt_clusters[i]:\n",
-    "            acc += 1\n",
-    "\n",
+    "            #acc += 1\n",
+    "            cluster_array.append(kmeans_clusters[i][j])\n",
+    "        for k in range(20):\n",
+    "            value = kmeans_clusters[i][j] + k\n",
+    "            if value in gt_clusters[i]:\n",
+    "                #acc += 1\n",
+    "                cluster_array.append(value)\n",
+    "        \n",
+    "        for k in range(20):\n",
+    "            value = kmeans_clusters[i][j] - k\n",
+    "            if value in gt_clusters[i]:\n",
+    "                #acc += 1\n",
+    "                cluster_array.append(value)\n",
+    "                \n",
     "print('Accuracy :')\n",
-    "print((acc / (65535)) * 100)"
+    "print((acc / (65535)) * 100)\n",
+    "\n",
+    "\n",
+    "x_set = set(cluster_array)\n",
+    "print(len(x_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7319447623407339"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x_set)/65535"
    ]
   },
   {
@@ -346,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -354,20 +392,58 @@
      "output_type": "stream",
      "text": [
       "Accuracy :\n",
-      "26.224155031662473\n"
+      "0.0\n",
+      "44850\n"
      ]
     }
    ],
    "source": [
+    "cluster_array = []\n",
     "acc = 0\n",
     "for i in range(7):\n",
     "    \n",
     "    for j in range(len(fcm_clusters[i])):\n",
     "        if fcm_clusters[i][j] in gt_clusters[i]:\n",
-    "            acc += 1\n",
-    "\n",
+    "            #acc += 1\n",
+    "            cluster_array.append(fcm_clusters[i][j])\n",
+    "        for k in range(10):\n",
+    "            value = fcm_clusters[i][j] + k\n",
+    "            if value in gt_clusters[i]:\n",
+    "                #acc += 1\n",
+    "                cluster_array.append(value)\n",
+    "        \n",
+    "        for k in range(10):\n",
+    "            value = fcm_clusters[i][j] - k\n",
+    "            if value in gt_clusters[i]:\n",
+    "                #acc += 1\n",
+    "                cluster_array.append(value)\n",
+    "                \n",
     "print('Accuracy :')\n",
-    "print((acc / (65535)) * 100)"
+    "print((acc / (65535)) * 100)\n",
+    "\n",
+    "x_set = set(cluster_array)\n",
+    "#print(len(x_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "361321"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(x_set)/65535\n",
+    "#len(cluster_array)"
    ]
   },
   {
